update routing