@@ -1,12 +1,5 @@
 package org.homio.api.ui.field.action;
 
-import static org.homio.api.util.JsonUtils.putOpt;
-
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.regex.Pattern;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
@@ -17,6 +10,14 @@ import org.homio.api.ui.field.action.UIActionInput.Type;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.json.JSONObject;
+
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.regex.Pattern;
+
+import static org.homio.api.util.JsonUtils.putOpt;
 
 @Getter
 @Setter
@@ -40,14 +41,14 @@ public class ActionInputParameter {
         this.value = input.value();
         this.description = input.description();
         this.validators = new HashSet<>();
-        /*for (UIActionInput.Validator validator : input.validators()) {
-            this.validators.add(validator.name());
-        }*/
+    /*for (UIActionInput.Validator validator : input.validators()) {
+        this.validators.add(validator.name());
+    }*/
         if (input.max() < Integer.MAX_VALUE) {
             this.validators.add("max:" + input.max());
         }
-        if ((type == UIActionInput.Type.number && input.min() > Integer.MIN_VALUE) ||
-            type != UIActionInput.Type.number && input.min() > 0) {
+        if ((type == UIActionInput.Type.number && input.min() > Integer.MIN_VALUE)
+            || type != UIActionInput.Type.number && input.min() > 0) {
             this.validators.add("min:" + input.min());
         }
         if (!".*".equals(input.pattern().regexp())) {
@@ -64,23 +65,29 @@ public class ActionInputParameter {
     }
 
     public static ActionInputParameter text(String name, String defaultValue, String... validators) {
-        return new ActionInputParameter(name, UIActionInput.Type.text, Set.of(validators), defaultValue);
+        return new ActionInputParameter(
+                name, UIActionInput.Type.text, Set.of(validators), defaultValue);
     }
 
-    public static ActionInputParameter textRequired(String name, String defaultValue, int min, int max) {
-        return new ActionInputParameter(name, UIActionInput.Type.text, Set.of("min:" + min, "max:" + max), defaultValue);
+    public static ActionInputParameter textRequired(
+            String name, String defaultValue, int min, int max) {
+        return new ActionInputParameter(
+                name, UIActionInput.Type.text, Set.of("min:" + min, "max:" + max), defaultValue);
     }
 
     public static ActionInputParameter email(String name, String defaultValue) {
-        return new ActionInputParameter(name, UIActionInput.Type.text, Collections.singleton("email"), defaultValue);
+        return new ActionInputParameter(
+                name, UIActionInput.Type.text, Collections.singleton("email"), defaultValue);
     }
 
     public static ActionInputParameter password(String name, String defaultValue) {
-        return new ActionInputParameter(name, UIActionInput.Type.password, Collections.singleton("password"), defaultValue);
+        return new ActionInputParameter(
+                name, UIActionInput.Type.password, Collections.singleton("password"), defaultValue);
     }
 
     public static ActionInputParameter bool(String name, boolean defaultValue) {
-        return new ActionInputParameter(name, UIActionInput.Type.bool, null, String.valueOf(defaultValue));
+        return new ActionInputParameter(
+                name, UIActionInput.Type.bool, null, String.valueOf(defaultValue));
     }
 
     public static ActionInputParameter message(String message) {
@@ -88,8 +95,8 @@ public class ActionInputParameter {
     }
 
     public static ActionInputParameter ip(String name, String defaultIpAddress) {
-        return new ActionInputParameter(name, UIActionInput.Type.ip,
-                Collections.singleton("ip"), defaultIpAddress);
+        return new ActionInputParameter(
+                name, UIActionInput.Type.ip, Collections.singleton("ip"), defaultIpAddress);
     }
 
     public static ActionInputParameter textarea(String name, String value) {
@@ -98,11 +105,12 @@ public class ActionInputParameter {
 
     // Options example: 1:true;0:false or 1;2;3
     public static ActionInputParameter select(String name, String value, List<OptionModel> options) {
-        return new ActionInputParameter(name, UIActionInput.Type.select, null, value).setOptions(options);
+        return new ActionInputParameter(name, UIActionInput.Type.select, null, value)
+                .setOptions(options);
     }
 
     public static ActionInputParameter select(String name, List<OptionModel> options) {
-        return select(name, options.get(0).getKey(), options);
+        return select(name, options.getFirst().getKey(), options);
     }
 
     public JSONObject toJson() {
